--- a/src/resources/styles/index.css
+++ b/src/resources/styles/index.css
@@ -12,16 +12,39 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    /*background-color: #72751B;*/
+    background: url("../assets/treee.png") repeat;
+    background-size: 2.95%;
+    background-position-x: 17.5px;
+}
+
+#un{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+#un span{
+    font-size: 200%;
+}
+
+#un div{
+    display: flex;
 }
 
 button{
+    color: white;
     padding: 15px 30px;
-    width: 200px;
-    font-size: 200%;
-    border: 1px solid black;
+    width: 175px;
+    font-size: 150%;
+    border: 1px solid white;
     background-color: transparent;
     border-radius: 3px;
-    margin-right: 100px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
 }
 
 button:hover{
@@ -29,5 +52,5 @@ button:hover{
 }
 
 canvas{
-    border: 1px solid red;
+    border-radius: 5px;
 }
